--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -68,4 +68,5 @@ flutter {
 dependencies {
     implementation(platform("com.google.firebase:firebase-bom:32.7.2"))
     implementation 'com.google.firebase:firebase-auth:21.0.1'
+    implementation("com.google.firebase:firebase-firestore")
 }
