--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   # Firebase
   cloud_firestore: ^4.15.4
   firebase_core: ^2.25.4
+  firebase_database: ^10.4.5
+  firebase_storage: ^11.6.5
 
   # Google Sign In
   firebase_auth: ^4.17.4
@@ -50,6 +52,10 @@ dependencies:
 
   # State Management
   provider: ^6.1.1
+  crud_table: ^0.0.6
+  firebase_analytics: ^10.8.5
+  date_time_picker: ^2.1.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
@@ -73,7 +79,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/images/
+    - assets/icons/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
