--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   date_time_picker: ^2.1.0
   intl: ^0.17.0
   shared_preferences: ^2.2.2
+  syncfusion_flutter_datagrid: ^24.2.9
+  dynamic_table: ^0.0.1-beta.2
 
 dev_dependencies:
   flutter_test:
